--- a/sketches2/regions.html
+++ b/sketches2/regions.html
@@ -35,14 +35,14 @@
     </svg>
   </div>
 
-  <script type="text/javascript" src="bower_components/d3/d3.js" charset="utf-8"></script>
-  <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="bower_components/topojson/topojson.js"></script>
-  <script type="text/javascript" src="bower_components/bluebird/js/browser/bluebird.js"></script>
-  <script type="text/javascript" src="bower_components/tipsy/src/javascripts/jquery.tipsy.js"></script>
+  <script type="text/javascript" src="/bower_components/d3/d3.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
+  <script type="text/javascript" src="/bower_components/topojson/topojson.js"></script>
+  <script type="text/javascript" src="/bower_components/bluebird/js/browser/bluebird.js"></script>
+  <script type="text/javascript" src="/bower_components/tipsy/src/javascripts/jquery.tipsy.js"></script>
 
-  <script type="text/javascript" src="src/util.js"></script>
-  <script type="text/javascript" src="src/data.js"></script>
-  <script type="text/javascript" src="src/regions.js"></script>
+  <script type="text/javascript" src="/src/util.js"></script>
+  <script type="text/javascript" src="/src/data.js"></script>
+  <script type="text/javascript" src="/src/regions.js"></script>
 </body>
 </html>
