--- a/sketches2/regions.html
+++ b/sketches2/regions.html
@@ -2,6 +2,7 @@
 <head>
   <title></title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="region.css">
 </head>
 <body>
   <div id="container">
@@ -42,6 +43,8 @@
   <script type="text/javascript" src="bower_components/tipsy/src/javascripts/jquery.tipsy.js"></script>
 
   <script type="text/javascript" src="src/util.js"></script>
+  <script type="text/javascript" src="src/init.js"></script>
+  <script type="text/javascript" src="src/map.js"></script>
   <script type="text/javascript" src="src/data.js"></script>
   <script type="text/javascript" src="src/regions.js"></script>
 </body>
