build process in place

--- a/sketches2/src/pages/region.html
+++ b/sketches2/src/pages/region.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" type="text/css" href="region.css">
 </head>
 <body>
@@ -36,16 +36,8 @@
     </svg>
   </div>
 
-  <script type="text/javascript" src="bower_components/d3/d3.js" charset="utf-8"></script>
-  <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-  <script type="text/javascript" src="bower_components/topojson/topojson.js"></script>
-  <script type="text/javascript" src="bower_components/bluebird/js/browser/bluebird.js"></script>
-  <script type="text/javascript" src="bower_components/tipsy/src/javascripts/jquery.tipsy.js"></script>
-
-  <script type="text/javascript" src="src/util.js"></script>
-  <script type="text/javascript" src="src/init.js"></script>
-  <script type="text/javascript" src="src/map.js"></script>
-  <script type="text/javascript" src="src/data.js"></script>
-  <script type="text/javascript" src="src/regions.js"></script>
+  <script type="text/javascript" src="deps.js"></script>
+  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="region.js"></script>
 </body>
 </html>
