--- a/region.html
+++ b/region.html
@@ -6,17 +6,17 @@
 </head>
 <body>
   <div id="container">
-    <div id="mapcontainer">
-      <div id="map">
-      </div>
-    </div>
 
-
-    <div id="content">
+    <div id="content" class="col-40">
       <h1>Escape Routes</h1>
-      <p>
+      <p class="contentbody">
         As the government crackdown on protesters spread, and an armed rebellion erupted, average Syrians caught in the middle began to flee their homes. Once the rebels themselves began to splinter, and religious extremists &mdash; many of them from outside Syria &mdash; began to pour over the borders, the numbers of Syrians headed the other way swelled. The numbers are so huge they can only be estimates. Conservative counts put the total number of Syrians who have left their homes at 11.6 million. More than 7.6 million are internally displaced, meaning they have been forced from their homes but remain inside Syria. Another 4 million have managed to cross the border.
       </p>
+    </div>
+
+    <div id="mapcontainer" class="col-60">
+      <div id="map">
+      </div>
     </div>
 
     <svg class="legend" width="300" height="100">
